--- a/docs/setup/configuring-reporting.asciidoc
+++ b/docs/setup/configuring-reporting.asciidoc
@@ -60,7 +60,6 @@ NOTE: If you use the default settings, you can still create a custom role that g
 
 . Specify the role settings.
 
-
 .. Enter the *Role name*. For example, `custom_reporting_user`.
 
 .. Specify the *Indices* and *Privileges*.
@@ -78,7 +77,11 @@ For more information, refer to {ref}/security-privileges.html[Security privilege
 .. Click *Customize*, then click *Analytics*.
 
 .. Next to the applications you want to grant reporting privileges, click *All* or *Customize*.
-
++
+If you’ve followed the example above, you should end up on a screen defining your customized privileges that looks like this:
+[role="screenshot"]
+image::user/reporting/images/kibana-privileges-with-reporting.png["Kibana privileges with Reporting options"]
++
 NOTE: If *Reporting* options for application features are not available, contact your administrator, or <<reporting-advanced-settings,check that xpack.reporting.roles.enabled is set to false in kibana.yml>>. 
 
 .. Click *Add {kib} privilege*.
