--- a/docs/user/alerting/rule-types/es-query.asciidoc
+++ b/docs/user/alerting/rule-types/es-query.asciidoc
@@ -27,8 +27,8 @@ the *time window*.
 Size:: Specifies the number of documents to pass to the configured actions when 
 the threshold condition is met.
 {es} query:: Specifies the ES DSL query to execute. The number of documents that 
-match this query is evaluated against the threshold condition. Aggregations are 
-not supported. 
+match this query is evaluated against the threshold condition. Only the `query` 
+field is used, other DSL fields are not considered. 
 Threshold:: Defines a threshold value and a comparison operator  (`is above`, 
 `is above or equals`, `is below`, `is below or equals`, or `is between`). The 
 number of documents that match the specified query is compared to this 
