--- a/docs/user/alerting/rule-types/es-query.asciidoc
+++ b/docs/user/alerting/rule-types/es-query.asciidoc
@@ -102,7 +102,8 @@ time window, and a document matches a query in multiple rule executions, it is
 alerted on only once. The rule uses the timestamp of the matches for 
 de-duplication; the timestamp of the latest match is used for evaluating the 
 rule conditions when the rule is executed. Only matches between the latest 
-timestamp and the actual rule execution are considered.
+timestamp from the previous execution and the actual rule execution are 
+considered.
 
 Suppose you have a rule configured to run every minute. The rule uses a time 
 window of 1 hour and checks if there are more than 99 matches for the query. The 
