--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -88,13 +88,15 @@ To review the deprecations in previous versions, refer to the following:
 [%collapsible]
 ====
 *Details* +
-When you add weak links in saved objects, for example, a dashboard may include a Markdown panel that contains a relative URL to
-another dashboard. Weak links are defined by free text, but are undefined by the saved object relationships, and can break if **both** of the following conditions are true:
+{kib} supports weak links in some saved objects. For example, a dashboard may include a Markdown panel that contains a relative URL to
+another dashboard. Weak links are defined by free text, _not_ the saved object's relationships, and can break if **both** of the following
+conditions are true:
 
 * You are importing saved objects into multiple spaces, _OR_ you are copying saved objects into another space
 * Before you upgraded to 8.0.0, the saved objects did not already exist in the destinations
 
-In 8.0.0 and later, weak links break because <<saved-object-ids-impact-when-using-import-and-copy,saved object IDs can change during import or copy>>. 
+In 8.0.0 and later, weak links break because <<saved-object-ids-impact-when-using-import-and-copy,saved object IDs can change during import or copy>>.
+This applies to both the UI and the API.
 This issue will be fixed 8.0.1 and 8.1.0. For more information, refer to {kibana-issue}123550[#123550].
 
 *Impact* +
