--- a/docs/setup/upgrade/upgrade-migrations.asciidoc
+++ b/docs/setup/upgrade/upgrade-migrations.asciidoc
@@ -5,7 +5,7 @@
 Each time you upgrade {kib}, an upgrade migration is performed to ensure that all <<managing-saved-objects,saved objects>> are compatible with the new version.
 
 NOTE: To help you prepare for the upgrade to 8.0.0, 7.17.0 includes an https://www.elastic.co/guide/en/kibana/7.17/upgrade-assistant.html[*Upgrade Assistant*]. 
-To access the assistant, go to *Management > Upgrade Assistant*.
+To access the assistant, go to *Stack Management > Upgrade Assistant*.
 
 WARNING: {kib} 7.12.0 and later uses a new migration process and index naming scheme. Before you upgrade, read the documentation for your version of {kib}.
 
@@ -58,15 +58,14 @@ complete the upgrade migration before bringing up the remaining instances.
 Review the common causes of {kib} upgrade failures and how to prevent them.
 
 [float]
-====== Documents were found for unknown saved object types
+====== Documents found for unknown saved object types
 Migrations will fail if saved objects were found which belong to an unknown
-saved object type. This could be caused by writing malformed documents directly
-to the Elasticsearch index, or by disabling a plugin that had previously
+saved object type. Unknown saved objects are typically caused by
+to the {es} index, or by disabling a plugin that had previously
 created a saved object.
 
 We recommend using the https://www.elastic.co/guide/en/kibana/7.17/upgrade-assistant.html[Upgrade Assistant] 
-to discover and remedy any unknown saved object types. In addition to the 
-upgrade assistant, {kib} version 7.17.0 deployments containing unknown saved
+to discover and remedy any unknown saved object types. {kib} version 7.17.0 deployments containing unknown saved
 object types will also log the following warning message:
 
 [source,sh]
