--- a/docs/management/connectors/action-types/servicenow-sir.asciidoc
+++ b/docs/management/connectors/action-types/servicenow-sir.asciidoc
@@ -31,17 +31,29 @@ image::management/connectors/images/servicenow-sir-connector-oauth.png[{sn-sir} 
 
 {sn-sir} connectors have the following configuration properties:
 
-Name::      The name of the connector.
-Is OAuth::  The type of authentication to use.
-URL::       {sn} instance URL.
-Username::  Username for HTTP Basic authentication.
-Password::  Password for HTTP Basic authentication.
-User Identifier:: Identifier to use for OAuth type authentication. This identifier should be the *User field* you selected during setup. For example, if the selected *User field* is *Email*, the user identifier should be the user's email address.
-Client ID:: The client ID assigned to your OAuth application.
-Client Secret:: The client secret assigned to your OAuth application.
-JWT Key ID:: The key ID assigned to the JWT verifier map of your OAuth application.
-Private Key:: The RSA private key generated during setup.
-Private Key Password:: The password for the RSA private key generated during setup, if set.
+Client ID::
+The client ID assigned to your OAuth application.
+Client Secret::
+The client secret assigned to your OAuth application.
+Is OAuth::
+By default, basic authentication is used instead of open authorization (OAuth).
+JWT key ID::
+The key identifier assigned to the JWT verifier map of your OAuth application.
+Password::
+The password for HTTP basic authentication.
+Private key::
+The RSA private key that you created for use in {sn}.
+Private key password::
+The password for the RSA private key.
+This value is required if you set a password for your private key.
+URL::
+The full {sn} instance URL.
+User identifier::
+The identifier to use for OAuth type authentication.
+This identifier should be the user field you selected during setup.
+For example, if the selected user field is `Email`, the user identifier should be the user's email address.
+Username::
+The username for HTTP basic authentication.
 
 [float]
 [[servicenow-sir-action-configuration]]
@@ -55,17 +67,30 @@ image::management/connectors/images/servicenow-sir-params-test.png[{sn-sir} para
 
 {sn-sir} actions have the following configuration properties.
 
-Short description::    A short description for the incident, used for searching the contents of the knowledge base.
-Priority::             The priority of the incident.
-Category::             The category of the incident.
-Subcategory::          The subcategory of the incident.
-Correlation ID::       Connectors using the same Correlation ID will be associated with the same {sn} incident. This value determines whether a new {sn} incident will be created or an existing one is updated. Modifying this value is optional; if not modified, the rule ID and alert ID are combined as `{{ruleID}}:{{alert ID}}` to form the Correlation ID value in {sn}. The maximum character length for this value is 100 characters.
+Additional comments::
+Additional information for the client, such as how to troubleshoot the issue.
+Category::
+The category of the incident.
+Correlation display::
+A descriptive label of the alert for correlation purposes in {sn}.
+Correlation ID::
+Connectors using the same correlation ID will be associated with the same {sn} incident.
+This value determines whether a new {sn} incident will be created or an existing one is updated. Modifying this value is optional; if not modified, the rule ID and alert ID are combined as `{{ruleID}}:{{alert ID}}` to form the correlation ID value in {sn}.
+The maximum character length for this value is 100 characters.
++
+--
+NOTE: Using the default configuration of `{{ruleID}}:{{alert ID}}` ensures that {sn} will create a separate incident record for every generated alert that uses a unique alert ID.
+If the rule generates multiple alerts that use the same alert IDs, {sn} creates and continually updates a single incident record for the alert.
+--
 
-NOTE: Using the default configuration of `{{ruleID}}:{{alert ID}}` ensures that {sn} will create a separate incident record for every generated alert that uses a unique alert ID. If the rule generates multiple alerts that use the same alert IDs, {sn} creates and continually updates a single incident record for the alert.
-
-Correlation Display::  A descriptive label of the alert for correlation purposes in {sn}.
-Description::          The details about the incident.
-Additional comments::  Additional information for the client, such as how to troubleshoot the issue.
+Description::
+The details about the incident.
+Priority::
+The priority of the incident.
+Short description::
+A short description for the incident, used for searching the contents of the knowledge base.
+Subcategory::
+The subcategory of the incident.
 
 [float]
 [[servicenow-sir-connector-networking-configuration]]
